# are-plugin

./: Train_full_pipeline.ipynb  cifar100_evaluation_metric.ipynb  compare_are_vs_ce_rejection.py  infer_comparison_single_image.ipynb  main.py  pyproject.toml  run_balanced_plugin_gating.py  run_worst_plugin_gating.py
docs/extracted_content/: metrics.md
plots/: plot.py  plot_head_tail_error.py
results/: expert_distribution_cifar100_lt_if100.json
results/are_better_cases_analysis/: are_better_cases_with_la_analysis.json
results/are_vs_ce_comparison/: ARE_TrueAccept_CE_FalseReject_worst_rr0.40_head.txt  ARE_TrueReject_CE_FalseAccept_balanced_rr0.40_tail.txt  ARE_TrueReject_CE_FalseAccept_worst_rr0.40_head.txt  ARE_TrueReject_CE_FalseAccept_worst_rr0.40_tail.txt  sample_indices_balanced.txt  sample_indices_worst.txt  summary_balanced.txt  summary_worst.txt
results/ltr_plugin/cifar100_lt_if100/: ltr_plugin_ce_only_worst.json  ltr_plugin_gating_balanced.csv  ltr_plugin_gating_balanced.json  ltr_plugin_gating_worst.csv  ltr_plugin_gating_worst.json
scripts/: analyze_are_better_cases_with_la.py  analyze_expert_distribution.py
src/infer/: pipeline.py
src/ltr_plugin/: __init__.py  algorithm_utils.py  data_utils.py  gating_utils.py  metrics_utils.py  plotting_utils.py  plugin_models.py
